--- a/gradle.properties
+++ b/gradle.properties
@@ -19,14 +19,10 @@ VERSION_CODE=1
 POM_DEVELOPER_ID=9you
 POM_SCM_DEV_CONNECTION=scm\:git\:ssh\://git@github.com/9you/android-iconify-font-7-stroke/.git
 POM_SCM_URL=https\://github.com/9you/android-iconify-font-7-stroke/
-GROUP=com.ls.iconify
+GROUP=com.loyalsound
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_NAME=Thanh Nguyen
 POM_URL=https\://github.com/9you/android-iconify-font-7-stroke/
 POM_SCM_CONNECTION=scm\:git\:git\://github.com/9you/android-iconify-font-7-stroke/.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_DESCRIPTION=Evolutive integration of popular icon fonts for Android
-systemProp.http.proxyHost=10.61.11.38
-systemProp.http.proxyPort=3128
-systemProp.https.proxyHost=10.61.11.38
-systemProp.https.proxyPort=3128
